allow for symfony 5

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "developerlab/mollie-payment-bundle",
+  "name": "daxara/mollie-payment-bundle",
   "type": "symfony-bundle",
   "description": "A Symfony 4 Bundle to connect with Mollie PSP",
   "keywords": ["payment", "mollie", "paymentbundle", "symfony4"],
@@ -13,8 +13,8 @@
   ],
   "require": {
     "php": "^5.5.9 || ^7.0",
-    "symfony/form": "^2.8 || ^3.0 || ^4.0",
-    "symfony/framework-bundle": "^2.8 || ^3.0 || ^4.0",
+    "symfony/form": "^2.8 || ^3.0 || ^4.0 || ^5.0",
+    "symfony/framework-bundle": "^2.8 || ^3.0 || ^4.0 || 5.0",
     "mollie/mollie-api-php": "^2.0"
   },
   "autoload": {
