--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   "require": {
     "php": "^5.5.9 || ^7.0",
     "symfony/form": "^2.8 || ^3.0 || ^4.0 || ^5.0",
-    "symfony/framework-bundle": "^2.8 || ^3.0 || ^4.0 || 5.0",
+    "symfony/framework-bundle": "^2.8 || ^3.0 || ^4.0 || ^5.0",
     "mollie/mollie-api-php": "^2.0"
   },
   "autoload": {
